--- a/script/install
+++ b/script/install
@@ -8,4 +8,13 @@ set -e
 cd "$(dirname $0)"/..
 
 # find the installers and run them iteratively
-find . -name install.sh | while read installer ; do sh -c "${installer}" ; done
+find . -name install.sh | sort | while read installer ; do
+    program=$(echo $installer | sed -e 's/^\.\///' -e 's/^_//' -e 's/\/.*$//')
+    if command -v ${program} >/dev/null 2>&1 ; then continue; fi
+    echo "Installing ${program}..."
+    if [ $program = direnv ]; then
+        sh -c "bin_path=~/.local/bin ${installer}"
+    else
+        sh -c "${installer}"
+    fi
+done
