--- a/script/install
+++ b/script/install
@@ -12,7 +12,9 @@ find . -name install.sh | sort | while read installer ; do
     program=$(echo $installer | sed -e 's/^\.\///' -e 's/^0-//' -e 's/\/.*$//')
     if command -v ${program} >/dev/null 2>&1 ; then continue; fi
     echo "Installing ${program}..."
-    if [ $program = direnv ]; then
+    if [ $program = 0-pyenv ]; then
+        command -v pyenv >/dev/null 2>&1 || sh -c "${installer}"
+    elif [ $program = direnv ]; then
         sh -c "bin_path=~/.local/bin ${installer}"
     else
         sh -c "${installer}" || exit 99
