--- a/script/install
+++ b/script/install
@@ -5,6 +5,14 @@
 
 set -e
 
+# add python build dependencies for debian/ubuntu
+command -v apt >/dev/null 2>&1 && \
+    ( command -v gcc >/dev/null 2>&1 && \
+      command -v make >/dev/null 2>&1 && \
+      command -v curl >/dev/null 2>&1 || \
+      sudo apt --yes install build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev \
+      libsqlite3-dev curl libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev )
+
 cd "$(dirname $0)"/..
 
 # find the installers and run them iteratively
