Change from asdf to rtx

--- a/script/install
+++ b/script/install
@@ -14,17 +14,19 @@ command -v apt >/dev/null 2>&1 && \
       sudo apt --yes install build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev \
       libsqlite3-dev curl libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev )
 
+# ensure rtx is available on the PATH
+ln -sf ~/.local/share/rtx/bin/rtx ~/.local/bin/rtx
+
 cd "$(dirname "$0")"/..
 
 # find the installers and run them iteratively
 find . -name install.sh | sort | while read -r installer ; do
-    program=$(echo "$installer" | sed -e 's/^\.\///' -e 's/^0-//' -e 's/\/.*$//')
+    program=$(echo "$installer" | sed -e 's/^\.\///' -e 's/^[0-9]-//' -e 's/\/.*$//')
     if command -v "${program}" >/dev/null 2>&1 ; then continue; fi
+    echo
     echo "Installing ${program}..."
-    if [ "$program" = 0-pyenv ]; then
-        command -v pyenv >/dev/null 2>&1 || sh -c "${installer}"
-    elif [ "$program" = direnv ]; then
-        sh -c "bin_path=~/.local/bin ${installer}"
+    if [ "$program" = direnv ]; then
+        sh -c "bin_path=~/.local/bin ${installer}" || exit 90
     else
         sh -c "${installer}" || exit 99
     fi
